# neurobridge

./: .gitignore  HF_MODEL_CARD.md  LICENSE  README.md  SAFETY.md  pyproject.toml  requirements.txt
docs/: phantom_protocol.md
models/: Modelfile.super-qwen-3b  Modelfile.super-qwen-7b
neuro/: __init__.py  cli.py  config.py  constants.py
neuro/compression/: __init__.py  expert_packet.py
neuro/evals/: __init__.py  runner.py  suites.py
neuro/interpretability/: __init__.py  credibility_vector.npz  lens.py  reconstruct_vector.py
neuro/learning/: __init__.py  adaptive_mind.py  agent.py  auto_ingest.py  experience_memory.py  solver.py
neuro/modes/: __init__.py  lab_mode.py  safe_mode.py
neuro/network/: daemon.py  identity.py  sync.py
neuro/phantom/: client.py  proxy_pool.py
neuro/repo/: __init__.py  indexer.py  search.py
neuro/router/: __init__.py  confidence.py  difficulty.py  router.py  token_budget.py
neuro/runtime/: __init__.py  claude_bridge.py  codex_bridge.py  cohere_client.py  executor.py  ollama_client.py  proxy_chat.py
neuro/safety/: __init__.py  audit_logger.py  command_scanner.py  secret_detector.py
neuro/training/: __init__.py  adapter_manager.py  checkpoint_manager.py  colab_generator.py  continual.py  dataset_builder.py  interceptor.py  optimizer.py
scripts/: clean_logs.py  install_ubuntu.sh  migrate_ollama_to_hdd.sh  test_api.py
tests/: test_adaptive_mind.py  test_core_models.py  test_learning_pipeline.py
